manifests/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-headers
  namespace: jellyfin
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    contentTypeNosniff: true
    referrerPolicy: strict-origin-when-cross-origin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: jellyfin-jellyfin-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: watch.jmly.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
